--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.HTML
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.HTML
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'LMI_NLP/style.css' %}">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,12 +25,12 @@
                         </ul>
                     </div>
                 </div>
-            
 
-                <div class = "H1"> 
+
+                <div class = "H1">
                     <section id = "homepage">
                         <h1>Une  Intelligence qui explorera les connaissances
-                            du monde pour vous</h1> 
+                            du monde pour vous</h1>
                         <div class = "CH1">
                             <p>
                                 Rexana est une intelligence artificielle
@@ -37,42 +40,42 @@
                             </p>
                         </div>
 
-                        
+
                     </section>
 
                 </div>
-                
+
                 <div class="Rex"> <img src = "IA.svg" alt="Rexana"/> </div>
-        
-        
-        
-        
+
+
+
+
         <section id = "us">
         </section>
-        
+
         <section id = "steps">
             <h1>Comment ca marche ?</h1>
 
             <h2>L’intelligence Artificielle, c’est quoi?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur 
+            <p>Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit.Pellentesque dui dolor, lacinia at
                  felis vel, luctus laoreet eros. Phasellus in
                 tempus sapien. Morbi sit amet ligula nec odio</p>
 
             <h2>Rexana, c’est qui?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur 
+            <p>Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit.Pellentesque dui dolor, lacinia at
                     felis vel, luctus laoreet eros. Phasellus in
                 tempus sapien. Morbi sit amet ligula nec odio</p>
 
             <h2>Etape 1</h2>
             <p>Analyse syntaxique de la phrase : en délimitant les mots et la ponctuation; Rexana comprend qu'il y a
-                des espaces entre les mots et que ces derniers forment une phrase, grâce au point. 
+                des espaces entre les mots et que ces derniers forment une phrase, grâce au point.
                 Exemple : "Je / mange / une / pomme.". </p>
-            
+
             <h2>Etape 2</h2>
-            <p>Analyse sémantique : determination et comprehension des mots cles. 
-                Exemple : "J'ai perdu mon mot de passe", Rexana comprend que 
+            <p>Analyse sémantique : determination et comprehension des mots cles.
+                Exemple : "J'ai perdu mon mot de passe", Rexana comprend que
                  "mot de passe" se rapproche beaucoup des mots "identifiant" ou "utilisateur".
                 </p>
 
@@ -83,12 +86,12 @@
 
             <h2>Etape 4</h2>
             <p>Ciblage de la reponse : apres avoir trouver la reponse adequate, Rexana nous la transmet en indiquant egalement le lien Wikipedia dans lequel elle a pioche la reponse</p>
-            
-            
+
+
         </section>
 
         <footer>
         </footer>
-        
+
 </body>
 </html>
