change svg to png

--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.HTML
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.HTML
@@ -80,7 +80,7 @@
         </div> 
 
         <div class="S1">
-            {% load static %}<img src="{% static "LMI_NLP/images/book.svg"%}" alt=""/>
+            {% load static %}<img src="{% static "LMI_NLP/images/book.png"%}" alt=""/>
 
         </div>
 
@@ -96,9 +96,9 @@
         <div class="content5">
             determination du theme : grace a l'Analyse semantique et syntaxique, il est en effet possible de trouver le theme qu'englobe la question, qu'on explorera par la suite pour trouver la reponse
                 a la question
-            
+
             <div class="S3">
-                          {% load static %}   <img src="{% static "LMI_NLP/images/theme.svg"%}" alt=""/>
+                          {% load static %}   <img src="{% static "LMI_NLP/images/theme.png"%}" alt=""/>
 
             </div>
 
@@ -109,7 +109,7 @@
             Ciblage de la reponse : apres avoir trouver la reponse adequate, Rexana nous la transmet en indiquant egalement le lien Wikipedia dans lequel elle a pioche la reponse
             
             <div class="S4">
-                {% load static %}<img src="{% static "LMI_NLP/images/answer.svg"%}" alt=""/>
+                {% load static %}<img src="{% static "LMI_NLP/images/answer.png"%}" alt=""/>
 
             </div>
         </div> 
@@ -126,7 +126,7 @@
             <div class="SR">   {% load static %}<img src="{% static "LMI_NLP/images/wac.svg"%}" alt=""/> </div>
             <div class="SA">   {% load static %}<img src="{% static "LMI_NLP/images/wac.svg"%}" alt=""/> </div>
             <div class="MA">   {% load static %}<img src="{% static "LMI_NLP/images/wac.svg"%}" alt=""/> </div>
-            <div class="charlotte">   {% load static %}<img src="{% static "LMI_NLP/images/char.svg"%}" alt=""/> </div>
+            <div class="charlotte">   {% load static %}<img src="{% static "LMI_NLP/images/charlotte.jpg"%}" alt=""/> </div>
 
         <footer>
         </footer> 
