--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.HTML
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.HTML
@@ -25,11 +25,13 @@
                             <li><a href="#homepage">Accueil</a></li>
                             <li><a href="#steps">Fonctionnement</a></li>
                             <li><a href="#us">Qui sommes-nous ?</a></li>
-                            <li><a href="#Go">Posez votre question</a></li>
+                            <li><a href="Execution.html">Posez votre question</a></li>
+
                         </ul>
                     </div>
                 </div>
             
+
 
                 <div class = "H1" > 
                     <section id = "homepage">
@@ -80,7 +82,7 @@
         </div> 
 
         <div class="S1">
-            {% load static %}<img src="{% static "LMI_NLP/images/book.png"%}" alt=""/>
+            {% load static %}<img src="{% static "LMI_NLP/images/book.svg"%}" alt=""/>
 
         </div>
 
@@ -98,7 +100,7 @@
                 a la question
 
             <div class="S3">
-                          {% load static %}   <img src="{% static "LMI_NLP/images/theme.png"%}" alt=""/>
+                          {% load static %}   <img src="{% static "LMI_NLP/images/theme.svg"%}" alt=""/>
 
             </div>
 
@@ -109,7 +111,7 @@
             Ciblage de la reponse : apres avoir trouver la reponse adequate, Rexana nous la transmet en indiquant egalement le lien Wikipedia dans lequel elle a pioche la reponse
             
             <div class="S4">
-                {% load static %}<img src="{% static "LMI_NLP/images/answer.png"%}" alt=""/>
+                {% load static %}<img src="{% static "LMI_NLP/images/answer.svg"%}" alt=""/>
 
             </div>
         </div> 
@@ -126,10 +128,10 @@
             <div class="SR">   {% load static %}<img src="{% static "LMI_NLP/images/wac.svg"%}" alt=""/> </div>
             <div class="SA">   {% load static %}<img src="{% static "LMI_NLP/images/wac.svg"%}" alt=""/> </div>
             <div class="MA">   {% load static %}<img src="{% static "LMI_NLP/images/wac.svg"%}" alt=""/> </div>
-            <div class="charlotte">   {% load static %}<img src="{% static "LMI_NLP/images/charlotte.jpg"%}" alt=""/> </div>
+            <div class="charlotte">   {% load static %}<img src="{% static "LMI_NLP/images/char.svg"%}" alt=""/> </div>
 
         <footer>
         </footer> 
-        
+
 </body>
 </html>
