--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
@@ -1,5 +1,5 @@
  {% load static%}
- <link rel="stylesheet" type="text/css" href="{% static 'LMI_NLP/exec.css' %}">
+ <link rel="stylesheet" href="{% static 'LMI_NLP/exec.css' %}">
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,7 +23,6 @@ input[type=text] {
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href = "exec.css" rel = "stylesheet">
     <title>Posez votre question</title>
 </head>
 <body>
@@ -35,11 +34,11 @@ input[type=text] {
                 <li><a href="homepage">Accueil</a></li>
                 <li><a href="us">Qui sommes-nous ?</a></li>
                 <li><a href="steps">Fonctionnement</a></li>
-                <li><a href="Go"> <span style=" color: #9D7FC6">posez votre question</span></a></li>
+                <li><a href="Go">posez votre question</a></li>
             </ul>
         </div>
     </div>
-    
+
     <div class="form">
         <form>
             <label for="fquestion"></label>
@@ -55,8 +54,3 @@ input[type=text] {
 
 </body>
 </html>
-
-
-
-
-
