get the post add some function for the future data to be send

--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
@@ -40,10 +40,11 @@ input[type=text] {
     </div>
 
     <div class="form">
-        <form>
+        <form action="results.html" method="post"> <!-- action should be changed -->
             <label for="fquestion"></label>
-            <input type="text" id="fquestion" name="fquestion" placeholder="Your question..">
-         </form>
+            <input type="text" id="fquestion" name="fquestion" placeholder="Your question.." value="{{ current_question }}">
+        <input type="submit" value="OK">
+        </form>
     </div>
 
 </body>
