should be good ? but cannot post correctly

--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
@@ -40,7 +40,7 @@ input[type=text] {
     </div>
 
     <div class="form">
-        <form action="results.html" method="post"> <!-- action should be changed -->
+        <form action="LMI_NLP/your-question/" method="post"> <!-- action should be changed -->
             <label for="fquestion"></label>
             <input type="text" id="fquestion" name="fquestion" placeholder="Your question.." value="{{ current_question }}">
         <input type="submit" value="OK">
