still cannot get the post help !

--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/your-question.html
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/your-question.html
@@ -7,7 +7,8 @@
   <head>
     <meta charset="utf-8">
     <title>title</title>
-    <link rel="stylesheet" href="style.css">
+    {% load static%}
+    <link rel="stylesheet" href="{% static 'LMI_NLP/style.css' %}">
   </head>
   <body>
     <!-- page content -->
