--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
@@ -40,8 +40,9 @@ input[type=text] {
     </div>
 
     <div class="form">
-        <form action="LMI_NLP/your-question/" method="post"> <!-- action should be changed -->
-            <label for="fquestion"></label>
+        <form action="" method="post"> <!-- action should be changed -->
+            {% csrf_token %}
+            <label for="fquestion">Votre question:</label>
             <input type="text" id="fquestion" name="fquestion" placeholder="Your question.." value="{{ current_question }}">
         <input type="submit" value="OK">
         </form>
