--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
@@ -1,7 +1,7 @@
  {% load static%}
 
 <head>
-	<link rel="stylesheet" href="{% static 'static/exec.css' %}">
+	<link rel="stylesheet" href="{% static 'LMI_NLP/exec.css' %}">
 	<title>OK</title>
 	<meta name="viewport" content="width=device-width">
 </head>
